# cybersmart_test

./: .dockerignore  .gitignore  Dockerfile  README.md  common.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
frontend/: index.html  script.js  style.css
tasks_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tasks_app/management/commands/: populate_data.py
tasks_app/migrations/: 0001_initial.py  0002_remove_task_owner.py
tests/: conftest.py
tests/integration/: test_task_apis.py
tests/models/: test_todo_models.py
tests/unit/: test_common_functions.py  test_location_serialiser.py  test_location_views.py  test_task_views.py  test_tasks_serialiser.py  test_weather_views.py
todo_root/: asgi.py  settings.py  urls.py  wsgi.py
weather_app/: exceptions.py  urls.py  utils.py  views.py
